--- a/website/lectures/lecture15.qmd
+++ b/website/lectures/lecture15.qmd
@@ -448,3 +448,15 @@ P_score <- get_dampened_transition(V_score, beta = 0.8)
 pi_score <- get_invariant(P_score)
 round(sort(pi_score, decreasing = TRUE), digits = 3)[1:10]
 ```
+
+
+## Guest Speaker
+
+- Thursday October 30: David Radke (Chicago Blackhawks)
+- 2:30pm - 3:30pm: Research Talk
+  - "Multiagent Challenges in Team Sports Analytics"
+  - Aimed at graduate students & faculty but all welcome!
+- 3:30pm - 4:30pm: Career Talk
+  - "Professional Hockey Analytics at the Chicago Blackhawks"
+  - How does Hockey Strateegy & Analytics groups operate? 
+- Both talks in Morgridge Hall 7560
